src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__approval_overlay.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---
"Akra / Approval Required / inline inspection                                                    "
"Type: Command execution                                                                         "
"Request: server-42                                                                              "
"Method: item/commandExecution/requestApproval                                                   "
"                                                                                                "
"Command execution requested; values are bounded and normalized for display.                     "
"Requested Details / 1-3 of 3                                                                    "
"Command: cargo test --lib                                                                       "
"Working directory: /workspace                                                                   "
"Reason: verify approval flow                                                                    "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"                                                                                                "
"Decision                                                                                        "
"Y: approve once                                                                                 "
"N / Esc: decline                                                                                "
"Up/Down/Page: scroll    Ctrl-C: decline + stop                                                  "
"Akra / root  •  branch: --  •  ready  •  gpt-5.5/high  •  ctx: --  •  queue: off                "
"Input paused  •  Y approve once  •  N / Esc decline                                             "
