src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__contextual_command_palette_120.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: medium
---
"Akra / root  ·  READY  ·  queue off  ·  agents off  ·  terminals 0  ·  gpt-5.5/high                                     "
"╭ Task                                                                                                                  "
"│ > :p                                                                                                                  "
"│palette 2/3                                                                                                            "
"│  :parallel  READY  parallel mode                                                                                      "
"│> :peek  LOCKED  parallel agent peek                                                                                   "
"│  :planning  READY  planning control center                                                                            "
"│  detail  args none → inspect active agent work · LOCKED · start parallel mode first                                   "
"╰  ↑/↓ or Tab select  |  Enter unavailable  |  Esc close                                                                "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
