src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_focused_composer_parallel_loading_120.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: stable_parallel_loading
---
"Parallel Event Stream                                                                                                   "
"[--:--:--] Supervisor: parallel board refreshed. loading 1/3: checking repository, planning, branch, pool, and GitHub   "
"readiness                                                                                                               "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"Command Hints                                                                                                           "
"Ctrl+O board  ·  :parallel refresh  ·  :peek agents  ·  :parallel off                                                   "
"Parallel setup in progress  ·  draft preserved  ·  Ctrl+O opens operations                                              "
"Akra / root  •  ready  •  gpt-5.5/high  •  queue: off                                                                   "
"Parallel  ◐ preparing workspace                                                                                         "
"╭ Task                                                                                                                  "
"│⠋  > Describe a task or type : for commands                                                                            "
"╰  Parallel board loading  |  input paused                                                                              "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
