src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_focused_composer_startup_blocked_120.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: blocked
---
"Akra / root  •  branch: --  •  blocked  •  gpt-5.5/high  •  ctx: --  •  queue: off                                      "
"status: codex app-server unavailable                                                                                    "
"╭ Task                                                                                                                  "
"│ > Describe a task or type : for commands                                                                              "
"╰  Ctrl+D diagnostics  |  draft preserved                                                                               "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
