src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_focused_composer_typing_120.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: typing
---
"Akra / root  ·  READY  ·  queue off  ·  agents off  ·  terminals 0  ·  gpt-5.5/high                                     "
"╭ Task                                                                                                                  "
"│ > Refine the operator timeline                                                                                        "
"╰  Enter send  |  Ctrl+J newline                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
