src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_main_buffer_ready_shell.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---
"Akra / root  •  branch: --  •  ready  •  gpt-5.5/high  •  ctx: --  •  queue: off"
"╭ Task                                                                          "
"│ > Describe a task or type : for commands                                      "
"╰  Type a task  |  : commands                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
