src/adapter/inbound/tui/app/snapshots/codex_exec_loop_native__adapter__inbound__tui__app__shell_rendering__tests__inline_main_buffer_viewport_replay_streaming.snap
---
source: src/adapter/inbound/tui/app/shell_rendering_tests.rs
expression: rendered
---
"                                                                                "
"                                                                                "
"                                                                                "
"Codex:                                                                          "
"  streaming reply still visible                                                 "
"                                                                                "
"Akra  |  thread: new draft  |  turn: working  |  input: streaming               "
"status: turn started                                                            "
"◦ Working (0s • turn running / interrupt runtime-native)                        "
"planning: stale  |  queue: queue head: rank 1 / terminal-bri...                 "
"now: Implement shell planning status  |  next: Trim legacy shell code           "
"proposed: none  |  blocked: Follow blocked review thread (blocked by tasks:     "
"task-2(in_progress))                                                            "
"recent codex: previous transcript should remain vis...                          "
">                                                                               "
"prompt: turn running  |  type now, Enter when idle                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
